--- a/build.properties
+++ b/build.properties
@@ -1,4 +1,11 @@
 source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
-               .
+               .,\
+               about.ini,\
+               about.properties,\
+               plugin.properties,\
+               plugin.xml,\
+               icons/,\
+               sw.png,\
+               extlibs/gson-2.8.2.jar
