--- a/plugin.xml
+++ b/plugin.xml
@@ -12,7 +12,7 @@
    <extension
          point="org.eclipse.ui.startup">
       <startup
-            class="com.swdc.codetime.Activator">
+            class="com.swdc.codetime.CodeTimeActivator">
       </startup>
    </extension>
    <extension point="org.eclipse.ui.views">
