--- a/plugin.xml
+++ b/plugin.xml
@@ -27,11 +27,96 @@
             allPopups="false"
             locationURI="toolbar:org.eclipse.ui.trim.status">
          <toolbar
-               id="com.swdc.ide.codetime.toolbar">
+               id="com.swdc.codetime.toolbar">
             <control
                   class="com.swdc.codetime.util.SWCoreStatusBar">
             </control>
          </toolbar>
       </menuContribution>
+      <menuContribution
+            locationURI="menu:org.eclipse.ui.main.menu?before=help">
+         <menu
+               id="com.swdc.codetime.menus.metrics"
+               label="Code Time"
+               mnemonic="M">
+            <command
+                  commandId="com.swdc.codetime.commands.metrics.codetime"
+                  id="com.swdc.codetime.commands.metrics.codetime">
+            </command>
+            <command
+                  commandId="com.swdc.codetime.commands.metrics.dashboard"
+                  id="com.swdc.codetime.commands.metrics.dashboard">
+            </command>
+            <command
+                  commandId="com.swdc.codetime.commands.metrics.topforty"
+                  id="com.swdc.codetime.commands.metrics.topforty">
+            </command>
+            <command
+                  commandId="com.swdc.codetime.commands.metrics.login"
+                  id="com.swdc.codetime.commands.metrics.login">
+            </command>
+            <command
+                  commandId="com.swdc.codetime.commands.metrics.togglestatus"
+                  id="com.swdc.codetime.commands.metrics.togglestatus">
+            </command>
+
+         </menu>
+      </menuContribution>
+   </extension>
+   <extension
+         point="org.eclipse.ui.commands">
+      <category
+            id="com.swdc.codetime.commands.category"
+            name="Code Time">
+      </category>
+      <command
+            categoryId="com.swdc.codetime.commands.category"
+            id="com.swdc.codetime.commands.metrics.codetime"
+            name="Code time dashboard">
+      </command>
+      <command
+            categoryId="com.swdc.codetime.commands.category"
+            id="com.swdc.codetime.commands.metrics.dashboard"
+            name="Web dashboard">
+      </command>
+      <command
+            categoryId="com.swdc.codetime.commands.category"
+            id="com.swdc.codetime.commands.metrics.topforty"
+            name="Software top 40">
+      </command>
+      <command
+            categoryId="com.swdc.codetime.commands.category"
+            id="com.swdc.codetime.commands.metrics.login"
+            name="Log in to see your coding data">
+      </command>
+      <command
+            categoryId="com.swdc.codetime.commands.category"
+            id="com.swdc.codetime.commands.metrics.togglestatus"
+            name="Show/hide status bar metrics">
+      </command>
+
+   </extension>
+   <extension
+         point="org.eclipse.ui.handlers">
+      <handler
+            class="com.swdc.codetime.handlers.CodeTimeDashboardHandler"
+            commandId="com.swdc.codetime.commands.metrics.codetime">
+      </handler>
+      <handler
+            class="com.swdc.codetime.handlers.SoftwareTopFortyHandler"
+            commandId="com.swdc.codetime.commands.metrics.topforty">
+      </handler>
+      <handler
+            class="com.swdc.codetime.handlers.MetricsDashboardHandler"
+            commandId="com.swdc.codetime.commands.metrics.dashboard">
+      </handler>
+      <handler
+            class="com.swdc.codetime.handlers.SoftwareLoginHandler"
+            commandId="com.swdc.codetime.commands.metrics.login">
+      </handler>
+      <handler
+            class="com.swdc.codetime.handlers.ToggleStatusBarHandler"
+            commandId="com.swdc.codetime.commands.metrics.togglestatus">
+      </handler>
    </extension>
 </plugin>
