updated feature and updates deployments for eclipse

--- a/feature/.project
+++ b/feature/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>com.swdc.codetime.feature</name>
+	<name>com.swdc.codetime</name>
 	<comment></comment>
 	<projects>
 	</projects>
