snowplow tracker implementation

--- a/build.properties
+++ b/build.properties
@@ -8,4 +8,5 @@ bin.includes = META-INF/,\
                plugin.xml,\
                icons/,\
                sw.png,\
-               extlibs/gson-2.8.2.jar
+               extlibs/gson-2.8.2.jar,\
+               extlibs/swdc-java-tracker-1.0.0.jar
