--- a/.classpath
+++ b/.classpath
@@ -7,7 +7,7 @@
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="extlibs/gson-2.8.2.jar"/>
-	<classpathentry kind="lib" path="extlibs/swdc-java-tracker-1.0.0.jar"/>
+	<classpathentry kind="lib" path="extlibs/swdc-java-tracker-1.0.0.jar" sourcepath="extlibs/swdc-java-tracker-1.0.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
