--- a/build.properties
+++ b/build.properties
@@ -9,4 +9,5 @@ bin.includes = META-INF/,\
                icons/,\
                sw.png,\
                extlibs/gson-2.8.2.jar,\
-               extlibs/swdc-java-tracker-1.0.0.jar
+               extlibs/swdc-java-tracker-1.0.0.jar,\
+               extlibs/apache-httpcomponents-httpclient.jar
