implement java slack ops and tree view changes

--- a/build.properties
+++ b/build.properties
@@ -10,4 +10,5 @@ bin.includes = META-INF/,\
                sw.png,\
                extlibs/gson-2.8.2.jar,\
                extlibs/swdc-java-tracker-1.1.1.jar,\
-               extlibs/apache-httpcomponents-httpclient.jar
+               extlibs/apache-httpcomponents-httpclient.jar,\
+               extlibs/swdc-java-ops-1.0.0.jar
