--- a/.classpath
+++ b/.classpath
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="extlibs/gson-2.8.2.jar"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="lib" path="extlibs/apache-httpcomponents-httpclient.jar"/>
-	<classpathentry kind="lib" path="extlibs/swdc-java-ops-1.1.3.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="extlibs/swdc-java-ops-1.1.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
